# final-project-level3-cv-17

./: .gitignore  README.md
classification/: dataset.py  inference.ipynb  inference_with_torch_script.ipynb  model.ipynb  model.py  requirements.txt  resize_and_write_pool.py  train.py
classification/bigcls/: custom.csv  dataset.py  inference.ipynb  model.py  train.py
classification/data/: BigSampling.py
classification/train_05/: resize_and_write_pool.py
detection/yolov5/: convertcsv.py  detect.py  mosaic.ipynb  train.py  val.py  visualization.ipynb
detection/yolov5/utils/: datasets.py  general.py
product-serving2/app/: __main__.py  model.py  utils.py
prototype/app/: Food_info.csv  Makefile  basic.py  detect.py  frontend.py  main.py  model.py  predict.py  pyproject.toml  requirements.txt  util.py  utils.py
prototype/app/models/: experimental.py
prototype/app/utils/: general.py  rect_draw.py
prototype/assets/: Food_info.csv  config.yaml  custom_classes.csv
prototype/assets/vegetable/: config.yaml
prototype/poetry/: 01_simple.py  02_path_parameter.py  03_query_parameter.py  05_request_body.py  07_form.py  08_file.py  11_event_handler.py  12_aoi_router.py  get-poetry.py  login_form.html  pyproject.toml
quantity_est/: dataset.py  inference.ipynb  train.py
tools/: interactive_EDA.ipynb  mean_std.ipynb  sampling.py  sampling2.py  split_test_set.py
