[tool.poetry]
name = "kimchi"
version = "0.1.0"
description = ""
authors = ["wsangbae <bsw0111@naver.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
fastapi = "^0.70.1"
streamlit = "^1.3.0"
uvicorn = "^0.16.0"
torch = "^1.10.1"
torchvision = "^0.11.2"
PyYAML = "^6.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
